Add dinamic inventory from maas for ansible

--- a/roles/maas/defaults/main.yml
+++ b/roles/maas/defaults/main.yml
@@ -8,8 +8,11 @@ MAAS_UI_USER: admin
 MAAS_UI_PASS: password
 MAAS_UI_USER_MAIL: admin@example.com
 MAAS_UI_PORT: 8088
+MAAS_INTERNAL_PORT: 5240
+MAAS_PROXY_PORT: 3000
+MAAS_PROXY_EN: true
 MAAS_NAME: MAIN
-MAAS_ENDPOINT: "http://10.233.44.77:{{MAAS_UI_PORT}}/MAAS"
+MAAS_ENDPOINT: "http://{{ansible_default_ipv4.address}}:{{MAAS_INTERNAL_PORT}}/MAAS/"
 MAAS_DEFAULT_OS: ubuntu
 MAAS_NTP_SERVERS: []
 MAAS_DNS_SERVERS:
