--- a/inventory/regionOne/group_vars/all/osh.yml
+++ b/inventory/regionOne/group_vars/all/osh.yml
@@ -1,13 +1,17 @@
 #---------------------------Networks---------#
 ceph_net: "192.168.2.0/24"
+ceph_vlan: 1500
+ceph_iface: "ceph"
 k8s_net: "192.168.1.0/24"
-vrouter_net: "10.233.44.0/24"
-pxe_net: "192.168.0.0/24"
-default_gw: "10.233.44.194"
+k8s_vlan: 1501
+k8s_iface: "k8s"
+vm_net: "192.168.0.0/24"
+vm_iface: "vm_net"
+default_gw: "192.168.0.194"
 # TODO
-#ntp_srv:
+ntp_srv:
 #---------------------------Images-----------#
-local_docker_registry: "192.168.1.194:5000"
+local_docker_registry: "192.168.0.194:5000"
 contrail_tag: "queens-master-411"
 osh_tag: 1.0
 pull_policy: "IfNotPresent"
