Improve maas deploy

--- a/inventory/regionOne/hosts.ini
+++ b/inventory/regionOne/hosts.ini
@@ -2,11 +2,6 @@
 # ## different ip than the default iface
 [all]
 control-plane1 ansible_host=192.168.0.1 ip=192.168.0.1
-control-plane2 ansible_host=192.168.1.78 ip=192.168.1.78
-control-plane3 ansible_host=192.168.1.79 ip=192.168.1.79
-compute-plane1 ansible_host=192.168.1.80 ip=192.168.1.80
-compute-plane2 ansible_host=192.168.1.81 ip=192.168.1.81
-compute-plane3 ansible_host=192.168.1.82 ip=192.168.1.82
 
 # ## configure a bastion host if your nodes are not directly reachable
 # bastion ansible_host=x.x.x.x ansible_user=some_user
@@ -60,6 +55,6 @@ osd_jour=vdd
 
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
-ansible_ssh_private_key_file="{{inventory_dir}}/../share_creds/maas.ssh.key"
+ansible_ssh_private_key_file="/root/os_admin.key"
 ansible_user=ubuntu
 ansible_become=true
