--- a/deploy_maas.yaml
+++ b/deploy_maas.yaml
@@ -2,5 +2,5 @@
   roles:
   - { role: prepare-node, stage: pre-k8s}
   - bootstrap-os
-  - container-engine
+  - { role: container-engine, docker_iptables_enabled: true }
   - maas
