--- a/roles/maas/defaults/main.yml
+++ b/roles/maas/defaults/main.yml
@@ -10,12 +10,17 @@ MAAS_UI_USER_MAIL: admin@example.com
 MAAS_UI_PORT: 8088
 MAAS_INTERNAL_PORT: 5240
 MAAS_PROXY_PORT: 3000
+MAAS_DHCP_RANGE:
+  start: 200
+  end: 253
+MAAS_DNS_NODE:
+ - 8.8.8.8
 MAAS_PROXY_EN: true
 MAAS_NAME: MAIN
-MAAS_ENDPOINT: "http://{{ansible_default_ipv4.address}}:{{MAAS_INTERNAL_PORT}}/MAAS/"
+MAAS_ENDPOINT: "http://{{ansible_default_ipv4.address}}:{{MAAS_UI_PORT}}/MAAS/"
 MAAS_DEFAULT_OS: ubuntu
 MAAS_NTP_SERVERS: []
-MAAS_DNS_SERVERS:
+MAAS_DNS_UPSTREAM:
  - 8.8.8.8
 MAAS_DEFAULT_DISTRO: bionic
 MAAS_DEFAULT_KERNEL: 'ga-18.04'
