--- a/roles/prepare-node/tasks/osd-labels.yaml
+++ b/roles/prepare-node/tasks/osd-labels.yaml
@@ -2,13 +2,13 @@
   shell: "kubectl label node --overwrite {{ node }}  \
          d{{item}}-j{{hostvars[node].osd_jour}}=enabled"
   with_items:
-  - "{{hostvars[node]['ansible_local']['osd_disks']}}"
+  - "{{hostvars[node]['osd_disks']}}"
   when: "item != hostvars[node].osd_jour and not join_areas.enabled"
 - name: label osd (join areas enabled)
   shell: "kubectl label node --overwrite {{ node }}  \
          d{{item.0}}-j{{hostvars[node].osd_jour}}-{{item.1.name}}=enabled"
   with_nested:
-  - "{{hostvars[node]['ansible_local']['osd_disks']}}"
+  - "{{hostvars[node]['osd_disks']}}"
   - "{{join_areas.areas}}"
   when: "item.0 != hostvars[node].osd_jour and join_areas.enabled and node in groups[item.1.name+'-osd-node']"
 - name: Set common osd label
