Add ip var to inventory, delete region check

--- a/inventory/regionOne/maas.ini
+++ b/inventory/regionOne/maas.ini
@@ -1,5 +1,5 @@
 [all]
-control-plane1 ansible_host=192.168.0.1 ip=192.168.0.1
+control-plane1 ansible_host=192.168.0.1
 
 [master]
 # ansible master host. Always localhost
