--- a/inventory/regionOne/helm_vars/components.yaml
+++ b/inventory/regionOne/helm_vars/components.yaml
@@ -24,110 +24,110 @@ INFRA_CORE:
 - name: ceph-osh-infra-config
   path: openstack-helm-infra/ceph-provisioners
   namespace: osh-infra
-#- name: ldap
-#  path: openstack-helm-infra/ldap
-#  namespace: osh-infra
-#- name: ingress-openstack
-#  path: openstack-helm-infra/ingress
-#  namespace: openstack
-#- name: ingress-contrail
-#  path: openstack-helm-infra/ingress
-#  namespace: contrail
-#- name: ceph-openstack-config
-#  path: openstack-helm-infra/ceph-provisioners
-#  namespace: openstack
-#- name: mariadb
-#  path: openstack-helm-infra/mariadb
-#  namespace: openstack
-#MONITORING:
-#- name: prometheus
-#  path: openstack-helm-infra/prometheus
-#  namespace: osh-infra
-#- name: alertmanager
-#  path: openstack-helm-infra/prometheus-alertmanager
-#  namespace: osh-infra
-#- name: prometheus-kube-state-metrics
-#  path: openstack-helm-infra/prometheus-kube-state-metrics
-#  namespace: kube-system
-#- name: prometheus-node-exporter
-#  path: openstack-helm-infra/prometheus-node-exporter
-#  namespace: kube-system
-#- name: prometheus-process-exporter
-#  path: openstack-helm-infra/prometheus-process-exporter
-#  namespace: kube-system
-#- name: prometheus-openstack-exporter
-#  path: openstack-helm-infra/prometheus-openstack-exporter
-#  namespace: openstack
-#- name: grafana
-#  path: openstack-helm-infra/grafana
-#  namespace: osh-infra
-#- name: nagios
-#  path: openstack-helm-infra/nagios
-#  namespace: osh-infra
-#LOGGING:
-#- name: radosgw-osh-infra
-#  path: openstack-helm-infra/ceph-rgw
-#  namespace: osh-infra
-#- name: elasticsearch
-#  path: openstack-helm-infra/elasticsearch
-#  namespace: osh-infra
-#- name: fluent-logging
-#  path: openstack-helm-infra/fluent-logging
-#  namespace: osh-infra
-#- name: kibana
-#  path: openstack-helm-infra/kibana
-#  namespace: osh-infra
-#OSH_CORE:
-#- name: rabbitmq
-#  path: openstack-helm-infra/rabbitmq
-#  namespace: openstack
-#- name: memcached
-#  path: openstack-helm-infra/memcached
-#  namespace: openstack
-#- name: keystone
-#  path: openstack-helm/keystone
-#  namespace: openstack
-#- name: radosgw-openstack
-#  path: openstack-helm-infra/ceph-rgw
-#  namespace: openstack
-#- name: glance 
-#  path: openstack-helm/glance
-#  namespace: openstack
-#- name: cinder
-#  path: openstack-helm/cinder
-#  namespace: openstack
-#- name: libvirt
-#  path: openstack-helm-infra/libvirt
-#  namespace: openstack
-#- name: nova
-#  path: openstack-helm/nova
-#  namespace: openstack
-#- name: neutron
-#  path: openstack-helm/neutron
-#  namespace: openstack
-#- name: horizon
-#  path: openstack-helm/horizon
-#  namespace: openstack
-#CONTRAIL:
-#- name: contrail-thirdparty
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-thirdparty
-#- name: contrail-controller
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-controller
-#- name: contrail-analytics
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-analytics
-#- name: contrail-vrouter
-#  namespace: contrail
-#  path: contrail-helm-deployer/contrail-vrouter
-#OS_SUPPL:
-#- name: heat
-#  path: openstack-helm/heat
-#  namespace: openstack
-#- name: gnocchi
-#  path: openstack-helm-infra/gnocchi
-#  namespace: openstack
-#- name: ceilometer
-#  namespace: openstack
-#  path: openstack-helm/ceilometer
+- name: ldap
+  path: openstack-helm-infra/ldap
+  namespace: osh-infra
+- name: ingress-openstack
+  path: openstack-helm-infra/ingress
+  namespace: openstack
+- name: ingress-contrail
+  path: openstack-helm-infra/ingress
+  namespace: contrail
+- name: ceph-openstack-config
+  path: openstack-helm-infra/ceph-provisioners
+  namespace: openstack
+- name: mariadb
+  path: openstack-helm-infra/mariadb
+  namespace: openstack
+MONITORING:
+- name: prometheus
+  path: openstack-helm-infra/prometheus
+  namespace: osh-infra
+- name: alertmanager
+  path: openstack-helm-infra/prometheus-alertmanager
+  namespace: osh-infra
+- name: prometheus-kube-state-metrics
+  path: openstack-helm-infra/prometheus-kube-state-metrics
+  namespace: kube-system
+- name: prometheus-node-exporter
+  path: openstack-helm-infra/prometheus-node-exporter
+  namespace: kube-system
+- name: prometheus-process-exporter
+  path: openstack-helm-infra/prometheus-process-exporter
+  namespace: kube-system
+- name: prometheus-openstack-exporter
+  path: openstack-helm-infra/prometheus-openstack-exporter
+  namespace: openstack
+- name: grafana
+  path: openstack-helm-infra/grafana
+  namespace: osh-infra
+- name: nagios
+  path: openstack-helm-infra/nagios
+  namespace: osh-infra
+LOGGING:
+- name: radosgw-osh-infra
+  path: openstack-helm-infra/ceph-rgw
+  namespace: osh-infra
+- name: elasticsearch
+  path: openstack-helm-infra/elasticsearch
+  namespace: osh-infra
+- name: fluent-logging
+  path: openstack-helm-infra/fluent-logging
+  namespace: osh-infra
+- name: kibana
+  path: openstack-helm-infra/kibana
+  namespace: osh-infra
+OSH_CORE:
+- name: rabbitmq
+  path: openstack-helm-infra/rabbitmq
+  namespace: openstack
+- name: memcached
+  path: openstack-helm-infra/memcached
+  namespace: openstack
+- name: keystone
+  path: openstack-helm/keystone
+  namespace: openstack
+- name: radosgw-openstack
+  path: openstack-helm-infra/ceph-rgw
+  namespace: openstack
+- name: glance 
+  path: openstack-helm/glance
+  namespace: openstack
+- name: cinder
+  path: openstack-helm/cinder
+  namespace: openstack
+- name: libvirt
+  path: openstack-helm-infra/libvirt
+  namespace: openstack
+- name: nova
+  path: openstack-helm/nova
+  namespace: openstack
+- name: neutron
+  path: openstack-helm/neutron
+  namespace: openstack
+- name: horizon
+  path: openstack-helm/horizon
+  namespace: openstack
+CONTRAIL:
+- name: contrail-thirdparty
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-thirdparty
+- name: contrail-controller
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-controller
+- name: contrail-analytics
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-analytics
+- name: contrail-vrouter
+  namespace: contrail
+  path: contrail-helm-deployer/contrail-vrouter
+OS_SUPPL:
+- name: heat
+  path: openstack-helm/heat
+  namespace: openstack
+- name: gnocchi
+  path: openstack-helm-infra/gnocchi
+  namespace: openstack
+- name: ceilometer
+  namespace: openstack
+  path: openstack-helm/ceilometer
