--- a/inventory/regionOne/maas.ini
+++ b/inventory/regionOne/maas.ini
@@ -8,6 +8,9 @@ localhost ansible_connection=local
 [maas]
 control-plane1 region_ctl=true rack_ctl=true
 
+[k8s-cluster:children]
+maas
+
 [all:vars]
 ansible_python_interpreter=/usr/bin/python3
 ansible_ssh_private_key_file="/root/os_admin.key"
