--- a/roles/maas/tasks/deploy_rack.yaml
+++ b/roles/maas/tasks/deploy_rack.yaml
@@ -20,6 +20,7 @@
     state: started
     network_mode: host
     purge_networks: true
+    restart_policy: always
     privileged: true
     tty: true
     env:
