--- a/inventory/regionOne/group_vars/k8s-cluster/k8s-cluster.yml
+++ b/inventory/regionOne/group_vars/k8s-cluster/k8s-cluster.yml
@@ -198,3 +198,5 @@ kubelet_status_update_frequency: 4s
 kube_controller_node_monitor_grace_period: 16s
 kube_controller_node_monitor_period: 2s
 kube_controller_pod_eviction_timeout: 30s
+
+populate_inventory_to_hosts_file: false
