--- a/deploy.yaml
+++ b/deploy.yaml
@@ -1,4 +1,14 @@
 ---
+- hosts: master
+  gather_facts: false
+  tasks:
+  - name: Delete all cached facts
+    file:
+      dest: "/tmp/{{item}}"
+      state: absent
+    with_items:
+    - "{{groups['k8s-cluster']}}"
+
 - hosts: k8s-cluster
   any_errors_fatal: "{{ any_errors_fatal | default(true) }}"
   gather_facts: true
