--- a/roles/deploy_osh/templates/mongodb.yaml
+++ b/roles/deploy_osh/templates/mongodb.yaml
@@ -1,5 +1,7 @@
 pod:
   replicas:
-    server: 1
+{% for pod, rep in replicas[item.name].iteritems() %}
+    {{pod}}: {%if cp_mode == "single" %}1{%else%}{{rep}}{%endif%}
+{% endfor %}
 volume:
   size: 5Gi
