Fix maas deploy in multiregion

--- a/inventory/regionTwo/maas.ini
+++ b/inventory/regionTwo/maas.ini
@@ -1,12 +1,12 @@
 [all]
-control-plane1-r1 ansible_host=192.168.0.1
+control-plane1-r2 ansible_host=192.168.10.1
 
 [master]
 # ansible master host. Always localhost
 localhost ansible_connection=local
 
 [maas]
-control-plane1-r1 region_ctl=true rack_ctl=true
+control-plane1-r2 region_ctl=false rack_ctl=true
 
 [k8s-cluster:children]
 maas
