--- a/inventory/regionTwo/group_vars/all/osh.yml
+++ b/inventory/regionTwo/group_vars/all/osh.yml
@@ -1,15 +1,15 @@
 #---------------------------Networks---------#
-ceph_net: "192.168.2.0/24"
+ceph_net: "192.168.12.0/24"
 ceph_vlan: 1500
 ceph_iface: "ens5"
-k8s_net: "192.168.1.0/24"
+k8s_net: "192.168.11.0/24"
 k8s_vlan: 1501
 k8s_iface: "ens4"
-default_gw: "192.168.0.194"
+default_gw: "192.168.10.194"
 # TODO
 ntp_srv:
 #---------------------------Images-----------#
-local_docker_registry: "192.168.0.194:5000"
+local_docker_registry: "192.168.10.194:5000"
 contrail_tag: "queens-master-418"
 osh_tag: 1.0
 pull_policy: "IfNotPresent"
@@ -24,7 +24,7 @@ mon_osd_full_ratio: .90
 mon_osd_nearfull_ratio: .80
 mon_max_pg_per_osd: 300
 #--------------------------k8s-Helm----------#
-global_domain_suffix: "region1.cloud.local"
+global_domain_suffix: "region2.cloud.local"
 pod_resources: true
 #--------------------------Infra-------------#
 infra:
@@ -47,17 +47,19 @@ alertmanager:
 #--------------------------OpenStack---------#
 # OpenStack release. Now only queens supported
 os_release: "queens"
-region: "RegionOne"
+region: "RegionTwo"
 multi_region:
 # Applied to master region only
   master:
-    master_role: true
+    master_role: false
     region_names:
     - "{{region}}"
     - RegionTwo
 # Applied to slave region only
   slaves:
     ks_endpoint: 
+      fqdn:
+      ips: []
 service_domain: "default"
 # Generate password and override static.
 # Don't disable it in production env
