--- a/roles/maas/tasks/deploy_region.yaml
+++ b/roles/maas/tasks/deploy_region.yaml
@@ -32,16 +32,16 @@
   - 000-default.conf
   - maas-http.conf
   - ports.conf
-- name: "REGION: create network for region controller"
-  docker_network:
-    name: maas
-    driver: bridge
-    driver_options:
-      com.docker.network.bridge.name: maas
-      com.docker.network.bridge.enable_ip_masquerade: "true"
-    ipam_options:
-      subnet: '10.10.10.0/24'
-    state: present
+#- name: "REGION: create network for region controller"
+#  docker_network:
+#    name: maas
+#    driver: bridge
+#    driver_options:
+#      com.docker.network.bridge.name: maas
+#      com.docker.network.bridge.enable_ip_masquerade: "true"
+#    ipam_options:
+#      subnet: '10.10.10.0/24'
+#    state: present
 - name: "REGION: start postgres contrainer"
   docker_container:
     name: postgresql
@@ -50,9 +50,10 @@
     detach: true
     env:
       USER_DB_PASS: "{{maas_db_pwd}}"
-    networks:
-    - name: maas
-    purge_networks: yes
+    network_mode: host
+#    networks:
+#    - name: maas
+#    purge_networks: yes
     restart_policy: always
     volumes:
     - /opt/maas/pg_data:/var/lib/postgresql/data
@@ -61,7 +62,7 @@
   shell: docker exec -t postgresql /tmp/db-init.sh
 - name: "REGION: start db sync job"
   shell: "docker run --rm -t --name maas-db-sync-job \
-         --network maas \
+         --network host \
          -v /opt/maas/conf/regiond.conf:/etc/maas/regiond.conf \
          -v /opt/maas/bin/db-sync.sh:/tmp/db-sync.sh \
          --entrypoint /tmp/db-sync.sh \
@@ -71,18 +72,25 @@
     name: maas-region-controller
     image: "{{MAAS_REGION_IMG}}"
     state: started
-    networks:
-    - name: maas
-    purge_networks: yes
+#    networks:
+#    - name: maas
+#    purge_networks: yes
+    network_mode: host
     restart_policy: always
     privileged: true
     dns_servers: "{{MAAS_DNS_UPSTREAM}}"
-    hostname: maas-region-controller
-    ports:
-    - "{{ansible_default_ipv4.address}}:{{MAAS_UI_PORT}}:80"
-    - "{{ansible_default_ipv4.address}}:{{MAAS_PROXY_PORT}}:{{MAAS_PROXY_PORT}}"
-    - "{{ansible_default_ipv4.address}}:53:53"
-    - "{{ansible_default_ipv4.address}}:5240:5240"
+#    hostname: maas-region-controller
+#    ports:
+#    - "{{ansible_default_ipv4.address}}:{{MAAS_UI_PORT}}:80"
+#    - "{{ansible_default_ipv4.address}}:{{MAAS_PROXY_PORT}}:{{MAAS_PROXY_PORT}}"
+#    - "{{ansible_default_ipv4.address}}:53:53"
+#    - "{{ansible_default_ipv4.address}}:5240:5240"
+#    - "{{ansible_default_ipv4.address}}:5250:5250"
+#    - "{{ansible_default_ipv4.address}}:5251:5251"
+#    - "{{ansible_default_ipv4.address}}:5252:5252"
+#    - "{{ansible_default_ipv4.address}}:5253:5253"
+#    - "{{ansible_default_ipv4.address}}:5254:5254"
+#    - "{{ansible_default_ipv4.address}}:5255:5255"
     tty: true
     volumes:
     - /opt/maas/conf/regiond.conf:/etc/maas/regiond.conf
