--- a/roles/prepare-node/tasks/pre-k8s.yaml
+++ b/roles/prepare-node/tasks/pre-k8s.yaml
@@ -37,7 +37,7 @@
   run_once: true
 - name: Add dns names to hosts
   lineinfile:
-    line: "{{hostvars[item.1]['ansible_'+lookup('vars', item.0)]['ipv4']['address']}} {{hostvars[item.1]['ansible_hostname']}}{%if fqdn_hostnames %}.{{global_domain_suffix}}{%endif%}"
+    line: "{{hostvars[item.1]['ansible_'+lookup('vars', item.0)]['ipv4']['address']}} {{hostvars[item.1]['ansible_hostname']}}{%if fqdn_hostnames %}.{{int_domain_suffix}}{%endif%}"
     path: /etc/hosts
     state: present
   with_nested:
