--- a/inventory/regionTwo/group_vars/k8s-cluster/k8s-cluster.yml
+++ b/inventory/regionTwo/group_vars/k8s-cluster/k8s-cluster.yml
@@ -106,7 +106,7 @@ kube_encrypt_secret_data: false
 
 # DNS configuration.
 # Kubernetes cluster name, also will be used as DNS domain
-cluster_name: "{{global_domain_suffix}}"
+cluster_name: "{{int_domain_suffix}}"
 # Subdomains of DNS domain to be resolved via /etc/resolv.conf for hostnet pods
 ndots: 2
 # Can be dnsmasq_kubedns, kubedns, coredns, coredns_dual, manual or none
