Add fqdn override to deploy

--- a/roles/deploy_osh/tasks/gen_password.yaml
+++ b/roles/deploy_osh/tasks/gen_password.yaml
@@ -16,7 +16,7 @@
 {%- endif %}"
   with_dict:
   - "{{endpoint.value.auth}}"
-  when: "endpoint.key not in  ['ceph_object_store']"
+  when: "endpoint.key not in  ['ceph_object_store'] and endpoint.value.auth is defined"
 
 # Exception for s3 passwords
 - name: "Gen password for {{endpoint.key}}"
@@ -30,4 +30,4 @@
   with_nested:
   - "{{endpoint.value.auth|list}}"
   - ['access_key', 'secret_key']
-  when: "endpoint.key == 'ceph_object_store'"
+  when: "endpoint.key == 'ceph_object_store' and endpoint.value.auth is defined"
