--- a/inventory/regionOne/helm_vars/endpoints.yaml
+++ b/inventory/regionOne/helm_vars/endpoints.yaml
@@ -213,6 +213,10 @@ identity:
       project_name: service
       user_domain_name: "{{service_domain}}"
       project_domain_name: "{{service_domain}}"
+  host_fqdn_override:
+    public: 
+      host: "keystone-{{region|lower}}.{{ext_domain_suffix}}"
+
 
 ceph_object_store:
   auth:
@@ -224,18 +228,22 @@ ceph_object_store:
       username: elasticsearch
       access_key: "elastic_access_key"
       secret_key: "elastic_secret_key"
-# not working now
+
 contrail_endpoints:
   auth:
     rabbitmq:
       username: guest
       password: guest
+
 ldap:
   auth:
     admin:
       username: admin
       bind: "cn=admin,dc={{int_domain_suffix.split('.')|join(',dc=')}}"
       password: password
+  host_fqdn_override:
+    public:
+      host: "ldap-{{region|lower}}.{{ext_domain_suffix}}"
 
 prometheus_mysql_exporter:
   auth:
@@ -251,18 +259,83 @@ monitoring:
       password: changeme
     user:
       link: monitoring.admin
+  host_fqdn_override:
+    public:
+      host: "prometheus-{{region|lower}}.{{ext_domain_suffix}}"
 grafana:
   auth:
     admin:
       username: admin
       password: password
+  host_fqdn_override:
+    public:
+      host: "grafana-{{region|lower}}.{{ext_domain_suffix}}"
 nagios:
   auth:
     admin:
       username: nagiosadmin
       password: password
+  host_fqdn_override:
+    public:
+      host: "nagios-{{region|lower}}.{{ext_domain_suffix}}"
 elasticsearch:
   auth:
     admin:
       username: admin
       password: changeme
+  host_fqdn_override:
+    public:
+      host: "elasticsearch-{{region|lower}}.{{ext_domain_suffix}}"
+
+object_store:
+  host_fqdn_override:
+    public:
+      host: "radosgw-{{region|lower}}.{{ext_domain_suffix}}"
+volume:
+  host_fqdn_override:
+    public:
+      host: "cinder-{{region|lower}}.{{ext_domain_suffix}}"
+volumev2:
+  host_fqdn_override:
+    public:
+      host: "cinder-{{region|lower}}.{{ext_domain_suffix}}"
+volumev3:
+  host_fqdn_override:
+    public:
+      host: "cinder-{{region|lower}}.{{ext_domain_suffix}}"
+image:
+  host_fqdn_override:
+    public:
+      host: "glance-{{region|lower}}.{{ext_domain_suffix}}"
+network:
+  host_fqdn_override:
+    public:
+      host: "neutron-{{region|lower}}.{{ext_domain_suffix}}"
+compute:
+  host_fqdn_override:
+    public:
+      host: "nova-{{region|lower}}.{{ext_domain_suffix}}"
+compute_novnc_proxy:
+  host_fqdn_override:
+    public:
+      host: "novncproxy-{{region|lower}}.{{ext_domain_suffix}}"
+compute_spice_proxy:
+  host_fqdn_override:
+    public:
+      host: "spiceproxy-{{region|lower}}.{{ext_domain_suffix}}"
+orchestration:
+  host_fqdn_override:
+    public:
+      host: "heat-{{region|lower}}.{{ext_domain_suffix}}"
+cloudformation:
+  host_fqdn_override:
+    public:
+      host: "cloudformation:-{{region|lower}}.{{ext_domain_suffix}}"
+metric:
+  host_fqdn_override:
+    public:
+      host: "gnocchi-{{region|lower}}.{{ext_domain_suffix}}"
+dashboard:
+  host_fqdn_override:
+    public:
+      host: "horizon-{{region|lower}}.{{ext_domain_suffix}}"
