--- a/inventory/regionTwo/group_vars/all/osh.yml
+++ b/inventory/regionTwo/group_vars/all/osh.yml
@@ -25,6 +25,7 @@ mon_osd_nearfull_ratio: .80
 mon_max_pg_per_osd: 300
 #--------------------------k8s-Helm----------#
 int_domain_suffix: "region2.cloud.local"
+ext_domain_suffix: "logistic.lan"
 pod_resources: true
 #--------------------------Infra-------------#
 infra:
@@ -49,17 +50,10 @@ alertmanager:
 os_release: "queens"
 region: "RegionTwo"
 multi_region:
-# Applied to master region only
   master:
     master_role: false
-    region_names:
-    - "{{region}}"
-    - RegionTwo
-# Applied to slave region only
   slaves:
-    ks_endpoint: 
-      fqdn:
-      ips: []
+    ks_endpoint: "keystone.{{ext_domain_suffix}}"
 service_domain: "default"
 # Generate password and override static.
 # Don't disable it in production env
@@ -88,7 +82,7 @@ join_areas:
     cinder_backup_pool_percent: 5
 #--------------------------------------------+
 BGP_port: 1179
-contrail_bgp_asn: 64512 
+contrail_bgp_asn: 64513
 #--------------------------Monitoring--------#
 monitoring: false
 logging: false
