--- a/roles/maas/defaults/main.yml
+++ b/roles/maas/defaults/main.yml
@@ -20,6 +20,7 @@ MAAS_NAME: MAIN
 MAAS_ENDPOINT: "http://{{ansible_default_ipv4.address}}:{{MAAS_UI_PORT}}/MAAS/"
 MAAS_DEFAULT_OS: ubuntu
 MAAS_NTP_SERVERS: []
+MAAS_DNS_PORT: 5353
 MAAS_DNS_UPSTREAM:
  - 8.8.8.8
 MAAS_DEFAULT_DISTRO: bionic
