--- a/inventory/regionOne/group_vars/all/docker.yml
+++ b/inventory/regionOne/group_vars/all/docker.yml
@@ -53,6 +53,7 @@ docker_options: >-
   {{ docker_registry_mirrors | map('regex_replace', '^(.*)$', '--registry-mirror=\1' ) | list | join(' ') }}
   {%- endif %}
   --graph={{ docker_daemon_graph }} {{ docker_log_opts }}
+  --live-restore
   {%- if ansible_architecture == "aarch64" and ansible_os_family == "RedHat" %}
   --add-runtime docker-runc=/usr/libexec/docker/docker-runc-current
   --default-runtime=docker-runc --exec-opt native.cgroupdriver=systemd
